Properties, actualizacion de ativity

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -126,8 +126,8 @@
                                         <table id="tabla" class="tabla-ordenar uk-table-middle">
                                             <thead class="titulo-tabla uk-text-center">
                                             <tr>
-                                                <th>#alumno['title.match.sentence.question']}</th>
-                                                <th>#alumno['title.match.sentence.answer']}</th>
+                                                <th>#{alumno['title.match.sentence.question']}</th>
+                                                <th>#{alumno['title.match.sentence.answer']}</th>
                                             </tr>
                                             </thead>
                                             <tbody class="cuerpo-tabla uk-text-center">
