--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -143,7 +143,7 @@
                             </div>
                             <div class="planet-5 orientacion letras">
                                 <div class="uk-form-stacked posicion-planeta">
-                                    <label class="uk-form-label" for="form-stacked-text">New Word:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.new.word']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
