--- a/tecolotl-web/src/main/webapp/alumno/mindmap/16.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/16.xhtml
@@ -58,18 +58,18 @@
                             <div class="uk-position-relative caja-1">
 
                                 <div class="uk-position-absolute titulo-16">
-                                    <p class="titulo1 uk-text-center">VOCABULARY STUDY</p>
+                                    <p class="titulo1 uk-text-center">#{alumno['map16.title.vocabulary.study']}</p>
                                 </div>
 
                                     <div class="uk-form-stacked contenedor1">
-                                        <label class="uk-form-label" for="form-stacked-text">In your own words:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.in.your']}</label>
                                         <div class="uk-margin">
                                             <textarea class="uk-textarea" rows="3"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor2">
-                                        <label class="uk-form-label" for="form-stacked-text">Definition:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.definition']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
@@ -78,35 +78,35 @@
 
                             <div class="uk-position-relative caja-2">
                                     <div class="uk-form-stacked contenedor3">
-                                        <label class="uk-form-label negrita" for="form-stacked-text">Word:</label>
+                                        <label class="uk-form-label negrita" for="form-stacked-text">#{alumno['map16.title.picture']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor4">
-                                        <label class="uk-form-label negrita" for="form-stacked-text">Prefix:</label>
+                                        <label class="uk-form-label negrita" for="form-stacked-text">#{alumno['map16.title.prefix']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor5">
-                                        <label class="uk-form-label" for="form-stacked-text">Picture:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.picture']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor6">
-                                        <label class="uk-form-label negrita" for="form-stacked-text">Root:</label>
+                                        <label class="uk-form-label negrita" for="form-stacked-text">#{alumno['map15.title.root']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor7">
-                                        <label class="uk-form-label negrita" for="form-stacked-text">Suffix:</label>
+                                        <label class="uk-form-label negrita" for="form-stacked-text">#{alumno['map16.title.suffix']}</label>
                                         <div class="uk-form-controls">
                                             <input class="uk-input" id="form-stacked-text" type="text"/>
                                         </div>
@@ -114,28 +114,28 @@
                             </div>
                             <div class="uk-position-relative caja-3">
                                     <div class="uk-form-stacked contenedor8">
-                                        <label class="uk-form-label" for="form-stacked-text">Sentence:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.sentence']}</label>
                                         <div class="uk-margin">
                                             <textarea class="uk-textarea" rows="5"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor9">
-                                        <label class="uk-form-label" for="form-stacked-text">Synonyms:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.synonyms']}</label>
                                         <div class="uk-margin">
                                             <textarea class="uk-textarea" rows="5"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor10">
-                                        <label class="uk-form-label" for="form-stacked-text">Antonyms:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.antonyms']}</label>
                                         <div class="uk-margin">
                                             <textarea class="uk-textarea" rows="5"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="uk-form-stacked contenedor11">
-                                        <label class="uk-form-label" for="form-stacked-text">Part of Speech:</label>
+                                        <label class="uk-form-label" for="form-stacked-text">#{alumno['map16.title.part.speech']}</label>
                                         <div class="uk-margin">
                                             <textarea class="uk-textarea" rows="5"></textarea>
                                         </div>
