estilos a letrero respondido

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -165,7 +165,7 @@
                                             </h:column>
                                         </h:dataTable>
                                     </div>
-                                    <span>Respondido</span>
+                                    <span class="realizado movimiento">Respondido</span>
                                 </h:panelGroup>
                                 <h:inputHidden id="respuestaOraciones" value="#{relacionarOracionControlador.idRespuesta}"/>
                                 <h:commandButton id="buttonEnviar" style="" onclick="recuperaDatos()" styleClass="boton-enviar uk-margin"  value="Send">
