--- a/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
@@ -66,48 +66,48 @@
                 </div>
             </div>
             <div class="uk-width-2-3@m">
-                <div class="uk-section uk-section-default uk-padding-remove-top uk-padding-remove-bottom ">
-                    <div class="uk-container">
-                        <div class="uk-grid uk-child-width-1-4@m" uk-grid="">
-                            <div class="">
-                                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Grupo</h5>
-                                <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">8</h1>-->
-                                   <div class="uk-flex uk-flex-center">
-                                        <h:panelGroup layout="block" styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Grupos; pos: right">
+                <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center" uk-switcher="">
+                    <ui:repeat value="#{dashboardProfesorControlador.grupoModeloLista}" var="grupos">
+                        <li><a href="#" class="boton-enviar">#{grupos.grado}° #{grupos.grupo}</a></li>
+                    </ui:repeat>
+                </ul>
+                <ul class=" uk-padding-remove-left">
+                    <ui:repeat value="#{dashboardProfesorControlador.grupoModeloLista}" var="grupos">
+                        <div class="uk-section uk-section-default uk-padding-remove-top uk-padding-remove-bottom uk-flex uk-flex-center">
+                            <div class="uk-container">
+                                <div class="uk-grid uk-child-width-1-3@l" uk-grid="">
+                                    <div>
+                                        <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Nro. Alumnos</h5>
+                                        <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">180</h1>-->
+                                        <div class="uk-flex uk-flex-center">
+                                            <h:panelGroup layout="block" styleClass="tamaño-imagen"  pt:uk-tooltip="title:#{dashboardProfesorControlador.profesorModelo.id} Alumnos; pos: right">
                                                 <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   />
-                                        </h:panelGroup>
-                                   </div>
-                            </div>
-                            <div>
-                                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Nro. Alumnos</h5>
-                                <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">180</h1>-->
-                                <div class="uk-flex uk-flex-center">
-                                    <h:panelGroup layout="block" styleClass="tamaño-imagen"  pt:uk-tooltip="title:#{dashboardProfesorControlador.profesorModelo.id} Alumnos; pos: right">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   />
-                                    </h:panelGroup>
-                                </div>
-                            </div>
-                            <div>
-                                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Comentarios</h5>
-                                <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">30<small class="uk-text-small">HR</small></h1>-->
-                                <div class="uk-flex uk-flex-center">
-                                    <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Horas; pos: right">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/administrador.svg"   />
-                                    </h:panelGroup>
-                                </div>
-                            </div>
-                            <div>
-                                <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Ejecicios revisión</h5>
-                                <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">38</h1>-->
-                                <div class="uk-flex uk-flex-center">
-                                    <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Pendientes; pos: left">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/coordinador.svg" />
-                                    </h:panelGroup>
+                                            </h:panelGroup>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Comentarios</h5>
+                                        <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">30<small class="uk-text-small">HR</small></h1>-->
+                                        <div class="uk-flex uk-flex-center">
+                                            <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Horas; pos: right">
+                                                <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/administrador.svg"   />
+                                            </h:panelGroup>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Ejecicios revisados</h5>
+                                        <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">38</h1>-->
+                                        <div class="uk-flex uk-flex-center">
+                                            <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Pendientes; pos: left">
+                                                <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/coordinador.svg" />
+                                            </h:panelGroup>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </ui:repeat>
+                </ul>
 
                 <div class="uk-section uk-section-default uk-padding-remove-top uk-margin-small-top ">
                     <div class="uk-container">
@@ -116,7 +116,6 @@
                                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards uk-text-center">Rendimiento Grupal</h5>
                                <div  class="chart-container">
                                    <canvas class="mi-tabla">
-
                                    </canvas>
                                </div>
 
@@ -284,19 +283,16 @@
 
             for (i = 0; i &lt; grafica.length; i++) {
 
-
                 let datos = grafica[i].querySelectorAll('div');
-
-
 
                 new Chart(grafica[i], {
                     type: 'horizontalBar',
                     data: {
-                        labels: ["Learning", "Speaking", "Mental Map", "Transcript", "Quiz"],
+                        labels: ["Learning", "Speaking", "Mental Map", "Transcript", "Quiz","hello"],
                         datasets: [{
-                            label: "Population (millions)",
-                            backgroundColor: ["#39f", "#895df6", "#3cba9f", "#e8c3b9", "#c45850"],
-                            data: [9, 7, 5.7, 8, 7]
+                            label: "Score students ",
+                            backgroundColor: ["#39f", "#895df6", "#3cba9f", "#e8c3b9", "#c45850", "#fff"],
+                            data: [9, 7, 5.7, 8, 7,67]
                         }]
                     },
                     options: {
@@ -310,12 +306,11 @@
                         },
                         title: {
                             display: true,
-                            text: 'Predicted activity in 2020'
+                            text: 'I am chostito the mouse of the statistics.'
                         }
                     }
                 });
             }
-
 
             // let datos2 = grafica2.querySelectorAll('div');
             new Chart(grafica2, {
